<resources>
    <string name="app_name">غذای محلی دزفول</string>
    <string name="toolbar_title">غذای محلی دزفول</string>
    <string name="title_activity_foot_recipe">Foot_recipe</string>
    <string name="title_activity_dezful">Dezful</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Name">نام شناسی</string>
    <string name="txtgravitynature_content">

        دزپل یا دِژپُل را در گویش بومی دزفیل و دسفیل گویند و عربی شده آن دزفول است. دژ به معنی سنگر و سکوی دیدبانی می‌باشد و چنین برمی‌آید که نام دزفول یا دزفیل از نام دژ ساخته شده در کنار پل گرفته شده‌است. گفتنی است یکی از محله‌های کهن شهر دزفول روناش است،در سده چهارم هجری قمری شهر دزفول به قصر روناش نیز نامور بوده‌است، که در دست راست رود دز جای داشته و هنوز ویرانه‌هایی به همین نام نمودار است.
احتمالاً نام دزفول یا دژپل از واژه پل مشتق شده است  و دز نیز به معنی قلعه است و منظور دژی است که عده‌ای نگهبان و مأمور برای حفاظت پل در آن زندگی می‌کردند. چنانچه پس از دوران انحطاط شوش و نیز خرابی جندی شاپور، برخی مردم این دو شهر به اطراف این دژ پناه آوردند و خانه‌هایی ساختند و به تدریج شهر به وجود آمده است. دزفول در اصل اندامیش نام داشته و تا اوایل قرن سیزدهم نیز به همین نام بوده است. معمولاً دژ به معنی قلعه است ولی در اینجا منظور یک دژ طبیعی می‌باشد که در ۴۸ کیلومتری دزفول در کنار رود دز قرار گرفته و یکی ازمهمترین استحکامات کوهستانی ایران به شمار می‌آید.
ابن سرابیون در کتاب جغرافیای تاریخی سرزمین خوزستان می‌نویسد: دزفول یعنی دژ پل که منظور قلعه پل باشد که در کنار رودخانه دز در جنوب شهر سابق جندی شاپور جا دارد و نیز معروف است که می‌گویند به فرمان شاپور اول ساخته شده است؛ که به همین مناسبت آن شهر نیز به همین نام موسوم شد.
شهر دزفول در اواخر قرن ۶ هجری به نام دزپول شهرت داشته است و در تاریخ گزیده حمداﷲ مستوفی مکرر این نام مکرر بصورت دزپول آمده است. در برخی از کتب نام قدیم رودخانه را زاب یا جندی شاپور هم نامیده‌اند. برخی از جغرافی دانان و نیز مورخین نام این شهر را روناش و قصر روناش ذکر کرده‌اند و چنین استنباط می‌شود که در قرن چهارم هجری چون ساختمانهای شهر دزفول در دو طرف رودخانه دز گسترش یافته‌اند پس در قسمت شرقی آن قلعه یا دژ قرار گرفته و قسمت غربی رودخانه به نام روناش معروف بوده است.



    </string>
    <string name="History">نام‌های دزفول در گذر تاریخ</string>
    <string name="History_content">

    اَوان(avan)   :پیشینه دزفول را خاورشناسان ازآن هنگام که این شهر پایتخت عیلامیان بود و حدود ۲۶۰۰ پیش از میلاد اوان خوانده می‌شد، نزدیک به پنج هزار سال پیش برآورد کرده‌اند. در نوشته‌های باستانی پس از طوفان نوح، از شهری به نام آوان نام برده شده است. این شهر، پایتخت تمدّن عیلام و سرآمد شهرهای مشرق زمین بوده است. کاوشگران غربی در نیم قرن اخیر، پس از مطالعات و تحقیقات فراوان تصریح کرده‌اند که اَوان همان دزفول کنونی است. در این صورت، دزفول فعلی یا اوان پنج هزارسال پیش را باید نخستین پایتخت امپراتوری گسترده کشور عیلام دانست.
    دژپل(Dzhpl)  : از ۱۷۵۰ سال قبل که پل قدیمی دزفول بر رودخانه دز بنا شد، نام این شهر را دژپل گذاشته‌اند. دژپل ازنام همان پل مشتق گردیده است. معمولاً دژ به معنی قلعه است ولی در اینجا منظور یک دژ طبیعی می‌باشد که در ۴۸ کیلومتری دزفول در کنار رود دز قرار گرفته و یکی ازمهمترین استحکامات کوهستانی ایران به شمار می‌آید.
    دزپل(dzpl):پس از دژپل، نام این شهر به دزپل رواج یافت.
    قصر روناش: (Gasr-o-Rovnas) روناش نام باستانی و پنج هزار ساله ی، دژپل، یا دزفول از شهرهای کنونی ایران است و نیز پلی که در زمان شاپور اول بر روی رودخانه دز بنا گردید پل روناش یا رعناش نام گذاری شد دژی به همین نام برای پاسداری از این پل بنا گردید که به آن قصر روناش یا رعنا می‌گفتند. نام روناش تا سدهٔ دهم هجری همچنان بر سر زبان‌ها بود تا اینکه در دوران شاه اسماعیل صفوی به  رعناش  بدل گردید. در حال حاضر نیز به برآمدگیهای ساحل غربی دز رعنا می‌گویند.
ابوعبداله یاقوت بن عبداله حموی رومی بغدادی در کتاب معروف معجم البلدان پیرامون قصر روناش چنین نوشته است: روناش شهرستانی از خوزستان است و جایی است که امروز دزپول گفته می‌شود.
    روناش: (Rovnas) این نام تا اوایل قرن دهم ه. ق رواج داشته است تا اینکه سرانجام در سال ۹۱۴ ه. ق در دوره صفویه و در زمان شاه اسماعیل اول دگرگونی یافته و رعناش (Ranas) گردیده است. در حال حاضر نیز برآمدگی‌های ساحل غربی دز را رعنا (Rana) می‌گویند که ش آخر آن حذف شده است.
    دزفول(dezful)  : این نام از قرن ۷ ه. ق در کتاب‌ها دیده می‌شود و تاکنون نیز به این نام مشهور بوده است. این نام عربی شده نام دژپل می‌باشد.
ابن بطوطه دزفول را دسبول نامیده و می‌نویسد: از دروازه‌های شهر یک دروازه به طرف خشکی و بقیه به طرف رودخانه باز می‌شود. در دوطرف رودخانه باغها قرار دارد. عمق رودخانه زیاد است...
کهارت می‌نویسد: قصر الروناش از محله قلعه فعلی جای همان دژ باستانی تا مسجد جامع دزفول را دربرمی‌گرفت. در قرون ۱۱ و۱۰میلادی، سوم وچهارم هجری، این شهر را القنطره به معنی  پل یا القنطره الرومی به معنی پل رومی می‌نامیدند.
به دلیل این‌که روناش و دزفول در دو سر رودخانه قرار گرفته بودند، بعضی این دو قسمت را دو شهر جداگانه شمرده و برخی هر دو را دو محله از یک شهر انگاشته‌اند.


    </string>
    <string name="CityBackground">شهری از سپیده دم تاریخ</string>
    <string name="CityBackground_Content">
        برپایه نوشته ایرج افشار در کتاب شهرهای ایران، دزفول شهری است که پیشینه آن به چندین هزار سال می‌رسد. از کهن‌ترین شهرهای استان خوزستان به شمار می‌رود و از دید تاریخ و فرهنگ ویژگی‌های برجسته‌ای دارد. بر پایه گفته‌های کاوشگران باختری در سده‌های گذشته کسانی مانند والتر هینتس آلمانی، آوان پایتخت نخستین امپراتوری پهناور کشور عیلام در دزفول کنونی جای داشته‌است. تپه‌های باستانی چغامیش با دیرینه‌ای نزدیک به ۴۰۰۰ سال پیش از زایش مسیح که به گفته باستان‌شناسان، گنجینه ارزشمندی از دانستنی‌های سودمند پیرامون رخدادهای زمان باستان از هزاره هفتم پیش از زایش تا شکوفایی تمدن شوش را در بردارند نیز در دزفول جای دارد. از این تپه‌های باستانی آثار ارزشمندی چون نخستین سند دریانوردی جهان، لوح‌های تکامل موسیقی و مهرهای استوانه‌ای چند هزار ساله کشف شده که کلیه این آثار در موزه ملی ایران و موزه مؤسسه شرق‌شناسی شیکاگو نگهداری می‌شوند.
بانو هلن کانتر، یکی از دست اندرکاران گروه کاوشگری و باستان‌شناسی این گستره، در هنگام یک سخنرانی در تهران پیرامون کاوش‌های انجام گرفته در تپه چغامیش از دزفول به نام شهری از سپیده دم تاریخ یاد کرده‌است.
تاریخ شهر دزفول را خاورشناسان ازآن هنگام که این شهر پایتخت عیلامیان در حدود ۲۶۰۰پیش از میلاد بود و  اوان خوانده می‌شد، نزدیک به پنج هزار سال برآورد کرده‌اند. در نوشته‌های باستانی پس از طوفان نوح، از شهری به نام اوان نام برده شده است. این شهر، پایتخت تمدّن عیلام  و سرآمد شهرهای مشرق زمین بوده است. کاوشگران غربی در نیم قرن اخیر، ازجمله والتر هینتس آلمانی، در کتاب خود تحت عنوان دنیای گمشده عیلام که به فارسی ترجمه شده، می‌نویسد:
ممکن است اوان در جایی که امروز دزفول قرار دارد، بوده باشد .

پس از مطالعات و تحقیقات فراوان تصریح کرده‌اند که اَوان همان دزفول کنونی است. در این صورت، دزفول فعلی یا اوان پنج هزارسال پیش را باید نخستین پایتخت امپراتوری گستردة کشور عیلام دانست.


    </string>
    <string name="gravity_nature">جاذبه‌های طبیعی</string>
    <string name="gravitynature_content">
آبشار شوی یکی از بزرگ‌ترین و زیباترین آبشارهای ایران در رشته‌کوه‌های زاگرس و در منطقه سردشت از توابع دزفول قرار گرفته است، همچنین دریاچه شهیون به عنوان یکی از زیباترین دریاچه‌های کشور در شمال شهرستان دزفول و در منطقه‌ای کوهستانی با طبیعت زیبا قرار گرفته است.
عبور رود دز به عنوان یکی از زلال‌ترین و پرآب‌ترین رودهای کشور از میان شهرستان دزفول باعث شده که در ساحل این رود، پارک‌ها و تفریحگاه‌های ساحلی متعددی ساخته شود که از جمله محبوب‌ترین آنها تفریحگاه ساحلی دز (علی کله) است که بخصوص در فصول بهار و تابستان گردشگران زیادی را از سطح شهرستان و شهرستان‌های مجاور به خود جذب می‌کند.
یکی دیگر از جاذبه‌های طبیعی شهرستان دزفول که در منطقه سردشت و شمال دزفول واقع شده، سالن کوه است که علاوه بر وجود جاذبه‌های کم‌نظیر طبیعی نظیر سیاه چاله، دشت لاله‌های واژگون و غارها و چشمه‌ها مکانی مناسب برای علاقه‌مندان به ورزش کوهنوردی است.
از دیگر جاذبه‌های طبیعی شهرستان دزفول، پارک ملی دز است. این پارک، یکی از پارک‌های ملی ایران به حساب می‌آید که در شمال استان خوزستان و در محدوده شهر میانرود از توابع شهرستان دزفول واقع است. وجود حیات وحش غنی در کنار چشم‌اندازهای زیبا نظیر رودخانه، تالاب، این منطقه را به یکی از چشم اندازهای مهم استان خوزستان بویژه از لحاظ پرنده نگری تبدیل کرده است. این جنگل‌ها یکی از زیستگاه‌های مهم گونه نادر گوزن زرد ایرانی است.


    </string>
    <string name="gravity_history">جاذبه‌های تاریخی</string>
    <string name="gravityhistory_content">
        نامی‌ترین سازه تاریخی دزفول «پل قدیم» دزفول است که شاپور نخست ساسانی به کمک زندانیان رومی آن را بر روی رود دز ساخت است از این رو پل رومی نیز خوانده می‌شود. این پل پیشینه‌ای نزدیک به ۱۷۰۰ سال دارد.
همچنین کشف آثاری همچون تپه‌های چغامیش سبب شده که دزفول را شهری از سپیده دم تاریخ بنامند.
آسیاب‌های آبی دزفول، مسجد جامع دزفول، بازار قدیم دزفول، آرامگاه «یعقوب لیث صفاری شهریار ایرانی»، تپه‌های چغامیش، شهر باستانی جندی شاپور و دانشگاه جندی شاپور اولین دانشگاه جهان ساخته شده در زمان ساسانیان، شهر باستانی ایوان کرخه، مجموعه تاریخی شاه رکن‌الدین، خانه تیزنو و خانه سوزنگر و خانه قلمبر از بخش‌های دیدنی و تاریخی این شهرستان به‌شمار می‌آیند.

    </string>
    <string name="monument">موزه آجری ایران</string>
    <string name="monument_content">

بافت تاریخی دزفول شامل خانه‌ها، مساجد، ساباط‌ها، حمام‌ها و گذرگاه‌های قدیمی است که از نظر معماری یکی از ارزشمندترین بافت‌های تاریخی کشور است و تا کنون بیش از یکصد اثر ملی از آن به ثبت رسیده است. بافت آجری با معماری اصیل ایرانی و تزئینات زیبا، دزفول را به «موزه آجری ایران» معروف کرده است.در دزفول تا چشم کار می‌کند، آجرچینی به سبک «خوون» به چشم می‌خورد که پس از دزفول بیشترین نمونه برای استفاده آجر را می‌توان در شوشتر دید.این نوع آجرکاری در دوره صفویه پیشرفت و توسعه فراوانی پیدا کرد و تا اواخر سلسله قاجاریه و پهلوی اول ادامه داشت. اما سالهای ۱۳۳۰ هجری شمسی تا ۱۳۴۰ را دهه پایان دهی و کنار گذاشتن این هنر با ارزش و جایگزینی آجر مستطیل شکل غربی و مصالح دیگر دانست. پیش از آن برج‌ها و زیگوراتها و کاخ‌های دزفول و حتی زیگورات ایلامی چغازنبیل که قدیمی‌ترین بنای شناخته شده در ایران به شمار می‌رود، با خشتهایی بزرگ و ضخیم ساخته می‌شدند. در دوره هخامنشیان از آجر لعابدار در دیوارهای کاخ آپادانا و قصر شوش استفاده شده که آنها نیز دارای ابعاد بزرگی هستند. اما قدیمیترین ابعاد و اندازه آجر در شهر دزفول متعلق است به آجرهای پل باستانی ساسانی که ساخت آن را به شاپور اول نسبت می‌دهند. این پل در قسمت پایین بر روی پایه‌های سنگی باربر و در قسمت فوقانی با آجر مربع شکل دوره ساسانی بنا شده است. بافت قدیم دزفول باوسعت بیش از۲۰۰ هکتار دارای ۲۸ محله وشبکه‌ای ازمعابر بطولی فراتر از۶۲ کیلومتر درکناره رود دز قرارگرفته است. این بافت دارای ۱۲ هزار واحد مسکونی به غیر از فضاهای مسکونی و تجاری می‌باشد. در دزفول، بناها بین شش تا هفت متر ارتفاع دارند و در آنها تزئینات متنوع و زیبای آجری به چشم می‌خورد. پوشش ساختمانها عموماً طاق و قوسی و از نوع پنج و هفت و نیم دایره است و قدمت عمومی بناها به دوره‌های قاجار و پهلوی نسبت داده می‌شود. البته آثاری از دوره صفوی نیز در این بافت کهن وجود دارد و تک آثاری بسیار نفیس همچون پل قدیم و آسیاب‌ها به دوره ساسانیان مرتبط است. هم‌اکنون در محدوده ۲۴۰ هکتاری بافت تاریخی دزفول، بیش از ۱۱۳ اثر ثبت شده ملی شامل مساجد، حمام‌ها، خانه‌ها و گذرهای تاریخی وجود دارند


    </string>
</resources>
