<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_background"
    tools:context=".Activities.Dezful">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/deztoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:title=" "
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/navigation_icon_history"
                android:layout_alignParentRight="true"

                />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="دزفول"
                    android:textSize="20dp"
                    android:paddingRight="35dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txtName"
            android:text="@string/Name"
            android:clickable="true"
            android:textStyle="bold"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:textColor="@color/white"
            android:background="@drawable/xml_tab_gradient"
            android:textAlignment="gravity"
            android:onClick="toggle_contents"
            />


            <ScrollView
                android:layout_below="@id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scroll1"
                >
                <TextView
                    android:layout_below="@+id/txt_History"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNamehistory_content"
                    android:text="@string/txtgravitynature_content"
                    android:gravity="right"
                    android:padding="15dp"
                    android:textAlignment="gravity"
                    android:lineSpacingExtra="15dp"
                    android:textSize="16dp"
                    />
            </ScrollView>


        <TextView

            android:layout_below="@id/scroll1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txt_History"
            android:textColor="@color/white"
            android:text="@string/History"
            android:clickable="true"
            android:onClick="toggle_contents1"
            android:textStyle="bold"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:background="@drawable/xml_tab_gradient"
            android:textAlignment="gravity"
            />
        <ScrollView
            android:layout_below="@id/txt_History"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll2"
            >
            <TextView
                android:layout_below="@+id/txt_History"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtgravityhistory_content"
                android:text="@string/History_content"
                android:gravity="right"
                android:padding="15dp"
                android:textAlignment="gravity"
                android:lineSpacingExtra="15dp"
                android:textSize="16dp"
                />
        </ScrollView>
        <TextView
            android:layout_below="@id/scroll2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txtHistory_back"
            android:text="@string/CityBackground"
            android:clickable="true"
            android:onClick="toggle_contents2"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/xml_tab_gradient"
            android:textAlignment="gravity"

            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtHistory_back"
            >
            <TextView
                android:layout_below="@+id/txtHistory_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtmonument_content"
                android:text="@string/CityBackground_Content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:lineSpacingExtra="15dp"
                android:textSize="16dp"
                android:padding="15dp"
                />
        </ScrollView>
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
