<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".Activities.Dezful">
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appid"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tourtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/navigation_icon_incognito"
                    android:layout_alignParentRight="true"

                    />
                <TextView
                    android:id="@+id/tourHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="گردشگری"
                    android:textSize="20dp"
                    android:paddingRight="35dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >
    <net.cachapa.expandablelayout.ExpandableLinearLayout
        android:layout_width="match_parent"
        android:id="@+id/Nature_expand"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txttour_nature"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="Nature_toggle"
            android:textAlignment="gravity"
            android:gravity="center"
            android:background="@drawable/xml_header_background"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/gravity_nature" />

            <ScrollView
                app:layout_expandable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tour_shavie"
                        />
                    <TextView
                        android:lineSpacingExtra="15dp"
                        android:id="@+id/content_Nature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/gravitynature_content"
                        android:textSize="15sp" >
                    </TextView>

                </LinearLayout>

            </ScrollView>



    </net.cachapa.expandablelayout.ExpandableLinearLayout>
    <net.cachapa.expandablelayout.ExpandableLinearLayout
            android:layout_width="match_parent"
            android:id="@+id/History_expand"
            android:layout_below="@id/Nature_expand"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="History_toggle"
                android:textAlignment="gravity"
                android:gravity="center"
                android:id="@+id/txtHistory_title"
                android:text="@string/gravity_history"
                android:background="@drawable/xml_header_background"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17dp"


                />

            <ScrollView
                app:layout_expandable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tourist_pol"
                        />
                    <TextView
                        android:lineSpacingExtra="15dp"
                        android:id="@+id/content_History"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/gravityhistory_content"
                        android:textSize="15sp" >
                    </TextView>

                </LinearLayout>
            </ScrollView>



        </net.cachapa.expandablelayout.ExpandableLinearLayout>

    <net.cachapa.expandablelayout.ExpandableLinearLayout
            android:layout_width="match_parent"
            android:id="@+id/Monument_expand"
            android:layout_below="@+id/History_expand"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="Monument_toggle"
                android:textAlignment="gravity"
                android:gravity="center"
                android:id="@+id/txtmon_title"
                android:text="@string/monument"
                android:background="@drawable/xml_header_background"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                />

            <ScrollView
                app:layout_expandable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tourist_man"
                        />
                    <TextView
                        android:lineSpacingExtra="15dp"
                        android:id="@+id/content_Monument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="15dp"
                        android:text="@string/monument_content"

                        android:textSize="15sp" >
                    </TextView>

                </LinearLayout>
            </ScrollView>



        </net.cachapa.expandablelayout.ExpandableLinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>
